Update for JDK 21